[package]
name = "toy"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
cranelift = "0.112.2"
cranelift-frontend = "0.112.2"
cranelift-jit = "0.112.2"
target-lexicon = "0.12.16"
memmap2 = "0.9.5"
pest = "2.6"
pest_derive = "2.6"
